--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>PHP</title>
 </ul>
 
-<li><a href="pagina1.html">INTRODUCCION</a></li>
-<li><a href="pagina2.html">HISTORIA Y EVOLUCION DE PHP</a></li>
-<li><a href="pagina3.html">CARASTERISTICAS Y USOS PRINCIPALES</a></li>
-<li><a href="pagina4.html">COMUNIDAD Y RECURSOS DE APRENDIZAJES</a></li>
+<li><a href="./htmls/pagina1.html">INTRODUCCION</a></li>
+<li><a href="./htmls/pagina2.html">HISTORIA Y EVOLUCION DE PHP</a></li>
+<li><a href="./htmls/pagina3.html">CARASTERISTICAS Y USOS PRINCIPALES</a></li>
+<li><a href="./htmls/pagina4.html">COMUNIDAD Y RECURSOS DE APRENDIZAJES</a></li>
 
 </ul>
 
